<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/rlLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cardViewLogin">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_logo"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:layout_margin="15dp"
                app:endIconMode="password_toggle"
                android:layout_below="@id/textInputEmailLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/textInputPasswordLogin"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="1dp"
                android:layout_alignLeft="@id/textInputPasswordLogin"
                android:layout_alignRight="@id/textInputPasswordLogin" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_register"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>