...
                android:layout_height="wrap_content"
                android:hint="Today, 10/07/20"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="date"
                    android:padding="10dp" />
...
